task-1/deploy/policies/require-non-root.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: validate-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must run as a non-root user."

        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
